tests/baselines/reference/parseJsxExtends2.errors.txt
tests/cases/compiler/index.tsx(2,13): error TS2304: Cannot find name 'T'.


==== tests/cases/compiler/index.tsx (1 errors) ====
    export function Foo() {
        return <T extends/>
                ~
!!! error TS2304: Cannot find name 'T'.
    }
    